SparkEngineApp and SparkEngineWorker.

--- a/engine/bower.json
+++ b/engine/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
+    "es6-promise": "https://github.com/jakearchibald/es6-promise.git#master",
     "three.js": "https://github.com/mrdoob/three.js.git"
   }
 }
