--- a/engine/package.json
+++ b/engine/package.json
@@ -12,6 +12,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.6.0",
     "karma": "^0.12.24",
     "karma-coverage": "^0.2.6",
     "karma-jasmine": "^0.2.2",
