--- a/engine/bower.json
+++ b/engine/bower.json
@@ -16,6 +16,6 @@
     "tests"
   ],
   "dependencies": {
-    "three.js": "https://github.com/mrdoob/three.js.git"
+    "three.js": "https://github.com/mrdoob/three.js.git#dev"
   }
 }
