Ray casting of actors from the scene.

--- a/engine/bower.json
+++ b/engine/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
+    "hammer.js": "https://github.com/hammerjs/hammer.js.git",
     "three.js": "https://github.com/mrdoob/three.js.git#dev"
   }
 }
